--- a/index.html
+++ b/index.html
@@ -1,43 +1,180 @@
-<!-- About Start -->
-<div class="container-fluid bg-secondary p-0">
-    <div class="row g-0">
-        <div class="col-lg-6 py-6 px-5">
-            <h1 class="display-5 mb-4">Welcome To <span class="text-primary">Your IT Consulting</span></h1>
-            <h4 class="text-primary mb-4">Professional IT Services & AI Solutions – Fraction of the Cost</h4>
-            <p class="mb-4">We deliver expert IT consulting, AI implementation, cloud solutions, cybersecurity, and custom software development at a fraction of typical costs. Our team helps businesses scale efficiently with cutting-edge technology and personalized strategies.</p>
-            <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
-        </div>
-        <div class="col-lg-6">
-            <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
-                <div class="d-flex text-white mb-5">
-                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                        <i class="fa fa-brain fs-4"></i> <!-- Changed to brain icon for AI feel -->
-                    </div>
-                    <div class="ps-4">
-                        <h3>AI & Machine Learning</h3>
-                        <p class="mb-0">Custom AI solutions that drive automation, insights, and competitive advantage for your business.</p>
-                    </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Professional IT Consulting & AI Solutions - Fraction of the Cost</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="IT consulting, AI solutions, cloud services, cybersecurity" name="keywords">
+    <meta content="Expert IT consulting and AI implementation at a fraction of typical costs. Professional, reliable, and innovative technology solutions for your business." name="description">
+
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+
+    <!-- Topbar Start -->
+    <div class="container-fluid bg-secondary ps-5 pe-0 d-none d-lg-block">
+        <div class="row gx-0">
+            <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
+                <div class="d-inline-flex align-items-center">
+                    <a class="text-body py-2 pe-3 border-end" href="#"><small>FAQs</small></a>
+                    <a class="text-body py-2 px-3 border-end" href="#"><small>Support</small></a>
+                    <a class="text-body py-2 px-3 border-end" href="#"><small>Privacy</small></a>
+                    <a class="text-body py-2 px-3 border-end" href="#"><small>Policy</small></a>
+                    <a class="text-body py-2 ps-3" href="#"><small>Career</small></a>
                 </div>
-                <div class="d-flex text-white mb-5">
-                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                        <i class="fa fa-cloud fs-4"></i>
+            </div>
+            <div class="col-md-6 text-center text-lg-end">
+                <div class="position-relative d-inline-flex align-items-center bg-primary text-white top-shape px-5">
+                    <div class="me-3 pe-3 border-end py-2">
+                        <p class="m-0"><i class="fa fa-envelope-open me-2"></i>info@youritconsulting.com</p>
                     </div>
-                    <div class="ps-4">
-                        <h3>Cloud Consulting</h3>
-                        <p class="mb-0">Seamless migration, optimization, and management of AWS, Azure, Google Cloud & more.</p>
-                    </div>
-                </div>
-                <div class="d-flex text-white">
-                    <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                        <i class="fa fa-shield-alt fs-4"></i>
-                    </div>
-                    <div class="ps-4">
-                        <h3>Cybersecurity</h3>
-                        <p class="mb-0">Protect your business with advanced threat detection, compliance, and secure infrastructure.</p>
+                    <div class="py-2">
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+1 (555) 123-4567</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- About End -->
+    <!-- Topbar End -->
+
+    <!-- Navbar Start -->
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
+        <a href="index.html" class="navbar-brand p-0">
+            <h1 class="m-0 text-uppercase text-primary"><i class="fas fa-robot me-2"></i>AIConsult</h1>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="navbar-nav ms-auto py-0">
+                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="service.html" class="nav-item nav-link">Services</a>
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <div class="dropdown-menu m-0">
+                        <a href="blog.html" class="dropdown-item">Blog</a>
+                        <a href="team.html" class="dropdown-item">Team</a>
+                    </div>
+                </div>
+                <a href="contact.html" class="nav-item nav-link">Contact</a>
+            </div>
+        </div>
+    </nav>
+    <!-- Navbar End -->
+
+    <!-- Carousel Start -->
+    <div class="container-fluid p-0 mb-5">
+        <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="w-100" src="img/carousel-1.jpg" alt="AI powered business solutions">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h5 class="text-white text-uppercase mb-3 animated slideInDown">Next-Gen IT & AI Consulting</h5>
+                            <h1 class="display-1 text-white mb-4 animated slideInDown">Intelligent Solutions at a Fraction of the Cost</h1>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Started</a>
+                            <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="w-100" src="img/carousel-2.jpg" alt="Modern IT consulting team">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="p-3" style="max-width: 900px;">
+                            <h5 class="text-white text-uppercase mb-3 animated slideInDown">Expert IT & AI Services</h5>
+                            <h1 class="display-1 text-white mb-4 animated slideInDown">Transform Your Business with AI Today</h1>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a>
+                            <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <!-- Carousel End -->
+
+    <!-- About Start -->
+    <div class="container-fluid bg-secondary py-6 px-5">
+        <div class="row g-5 align-items-center">
+            <div class="col-lg-6">
+                <h1 class="display-5 mb-4">Welcome to <span class="text-primary">AIConsult</span></h1>
+                <h4 class="text-primary mb-4">Professional IT & AI Services – Exceptional Quality at a Fraction of the Cost</h4>
+                <p class="mb-4">We specialize in delivering enterprise-grade IT consulting, artificial intelligence solutions, cloud architecture, cybersecurity, and custom software development — all at significantly lower costs than traditional firms.</p>
+                <p class="mb-5">Whether you're looking to implement AI, modernize your infrastructure, or protect your digital assets, our expert team delivers results without breaking the bank.</p>
+                <a href="" class="btn btn-primary py-3 px-5 rounded-pill">Get Your Free Consultation</a>
+            </div>
+            <div class="col-lg-6">
+                <div class="h-100 bg-primary p-5">
+                    <div class="d-flex text-white mb-5">
+                        <div class="flex-shrink-0 d-flex align-items-center justify-content-center bg-white text-primary rounded-circle" style="width: 60px; height: 60px;">
+                            <i class="fas fa-brain fs-4"></i>
+                        </div>
+                        <div class="ps-4">
+                            <h3>AI & Machine Learning</h3>
+                            <p class="mb-0">Custom AI models, automation, predictive analytics and intelligent process optimization</p>
+                        </div>
+                    </div>
+                    <div class="d-flex text-white mb-5">
+                        <div class="flex-shrink-0 d-flex align-items-center justify-content-center bg-white text-primary rounded-circle" style="width: 60px; height: 60px;">
+                            <i class="fas fa-cloud fs-4"></i>
+                        </div>
+                        <div class="ps-4">
+                            <h3>Cloud & DevOps</h3>
+                            <p class="mb-0">AWS, Azure, Google Cloud migration, optimization and managed services</p>
+                        </div>
+                    </div>
+                    <div class="d-flex text-white">
+                        <div class="flex-shrink-0 d-flex align-items-center justify-content-center bg-white text-primary rounded-circle" style="width: 60px; height: 60px;">
+                            <i class="fas fa-shield-halved fs-4"></i>
+                        </div>
+                        <div class="ps-4">
+                            <h3>Cybersecurity</h3>
+                            <p class="mb-0">Advanced threat protection, compliance, penetration testing & secure architecture</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- About End -->
+
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
+</body>
+</html>
