--- a/index.html
+++ b/index.html
@@ -2,45 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional IT Consulting & AI Solutions - Fraction of the Cost</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="IT consulting, AI solutions, cloud services, cybersecurity" name="keywords">
-    <meta content="Expert IT consulting and AI implementation at a fraction of typical costs. Professional, reliable, and innovative technology solutions for your business." name="description">
+    <meta name="keywords" content="IT consulting, AI solutions, cloud services, cybersecurity, affordable IT">
+    <meta name="description" content="Expert IT consulting, AI implementation, cloud & cybersecurity solutions at a fraction of typical costs.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
-    <!-- Google Web Fonts -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
-    <!-- Icon Font Stylesheet -->
+    <!-- Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
+    <!-- Owl Carousel -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-    <!-- Customized Bootstrap Stylesheet -->
+    <!-- Bootstrap & Custom CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-</head>
 
+    <style>
+        .carousel-item img {
+            height: 85vh;
+            min-height: 600px;
+            object-fit: cover;
+        }
+        .carousel-caption {
+            background: rgba(0,0,0,0.45);
+            border-radius: 12px;
+            padding: 2.5rem 2rem;
+            max-width: 900px;
+        }
+        .carousel-caption h1 {
+            font-weight: 800;
+            line-height: 1.1;
+        }
+        .letter-spacing-2 {
+            letter-spacing: 3px;
+        }
+        @media (max-width: 992px) {
+            .carousel-caption h1 { font-size: 2.8rem !important; }
+            .carousel-caption h5 { font-size: 1.25rem !important; }
+        }
+        @media (max-width: 768px) {
+            .carousel-caption { padding: 1.8rem 1.2rem; }
+            .carousel-caption h1 { font-size: 2.2rem !important; }
+        }
+    </style>
+</head>
 <body>
 
-    <!-- Topbar Start -->
+    <!-- Topbar -->
     <div class="container-fluid bg-secondary ps-5 pe-0 d-none d-lg-block">
         <div class="row gx-0">
             <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
                     <a class="text-body py-2 pe-3 border-end" href="#"><small>FAQs</small></a>
                     <a class="text-body py-2 px-3 border-end" href="#"><small>Support</small></a>
-                    <a class="text-body py-2 px-3 border-end" href="#"><small>Privacy</small></a>
-                    <a class="text-body py-2 px-3 border-end" href="#"><small>Policy</small></a>
-                    <a class="text-body py-2 ps-3" href="#"><small>Career</small></a>
+                    <a class="text-body py-2 px-3" href="#"><small>Privacy Policy</small></a>
                 </div>
             </div>
             <div class="col-md-6 text-center text-lg-end">
@@ -55,9 +79,8 @@
             </div>
         </div>
     </div>
-    <!-- Topbar End -->
 
-    <!-- Navbar Start -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
             <h1 class="m-0 text-uppercase text-primary"><i class="fas fa-robot me-2"></i>AIConsult</h1>
@@ -70,46 +93,54 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item">Blog</a>
-                        <a href="team.html" class="dropdown-item">Team</a>
-                    </div>
-                </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
         </div>
     </nav>
-    <!-- Navbar End -->
 
-    <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5">
+    <!-- Carousel - Clean & Modern Version -->
+    <div class="container-fluid p-0 mb-5 position-relative">
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
+                <!-- Slide 1 -->
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="AI powered business solutions">
+                    <img class="w-100" src="img/carousel-1.jpg" alt="Professional IT team working with AI">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase mb-3 animated slideInDown">Next-Gen IT & AI Consulting</h5>
-                            <h1 class="display-1 text-white mb-4 animated slideInDown">Intelligent Solutions at a Fraction of the Cost</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Started</a>
-                            <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Learn More</a>
+                        <div class="text-center">
+                            <h5 class="text-white text-uppercase mb-3 fw-bold letter-spacing-2 animated slideInDown">
+                                IT & AI Consulting
+                            </h5>
+                            <h1 class="display-3 display-md-2 text-white fw-bold mb-4 animated slideInDown">
+                                Expert Solutions<br>at a Fraction of the Cost
+                            </h1>
+                            <div class="mt-4 animated slideInUp">
+                                <a href="#" class="btn btn-primary btn-lg px-5 py-3 me-3 rounded-pill shadow">Get Quote</a>
+                                <a href="#" class="btn btn-outline-light btn-lg px-5 py-3 rounded-pill">Contact Us</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <!-- Slide 2 -->
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Modern IT consulting team">
+                    <img class="w-100" src="img/carousel-2.jpg" alt="Team discussing technical solutions">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
-                            <h5 class="text-white text-uppercase mb-3 animated slideInDown">Expert IT & AI Services</h5>
-                            <h1 class="display-1 text-white mb-4 animated slideInDown">Transform Your Business with AI Today</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a>
-                            <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                        <div class="text-center">
+                            <h5 class="text-white text-uppercase mb-3 fw-bold letter-spacing-2 animated slideInDown">
+                                Professional IT Support
+                            </h5>
+                            <h1 class="display-3 display-md-2 text-white fw-bold mb-4 animated slideInDown">
+                                Answers to All Your<br>Technical Questions
+                            </h1>
+                            <div class="mt-4 animated slideInUp">
+                                <a href="#" class="btn btn-primary btn-lg px-5 py-3 me-3 rounded-pill shadow">Get Started</a>
+                                <a href="#" class="btn btn-outline-light btn-lg px-5 py-3 rounded-pill">Learn More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
@@ -120,17 +151,16 @@
             </button>
         </div>
     </div>
-    <!-- Carousel End -->
 
-    <!-- About Start -->
+    <!-- About Section (kept from your previous version) -->
     <div class="container-fluid bg-secondary py-6 px-5">
         <div class="row g-5 align-items-center">
             <div class="col-lg-6">
                 <h1 class="display-5 mb-4">Welcome to <span class="text-primary">AIConsult</span></h1>
                 <h4 class="text-primary mb-4">Professional IT & AI Services – Exceptional Quality at a Fraction of the Cost</h4>
-                <p class="mb-4">We specialize in delivering enterprise-grade IT consulting, artificial intelligence solutions, cloud architecture, cybersecurity, and custom software development — all at significantly lower costs than traditional firms.</p>
-                <p class="mb-5">Whether you're looking to implement AI, modernize your infrastructure, or protect your digital assets, our expert team delivers results without breaking the bank.</p>
-                <a href="" class="btn btn-primary py-3 px-5 rounded-pill">Get Your Free Consultation</a>
+                <p class="mb-4">We deliver enterprise-grade IT consulting, artificial intelligence solutions, cloud architecture, cybersecurity, and custom software — all at significantly lower costs than traditional firms.</p>
+                <p class="mb-5">From AI implementation to infrastructure modernization and digital protection — we help businesses succeed with reliable, cost-effective technology expertise.</p>
+                <a href="#" class="btn btn-primary py-3 px-5 rounded-pill">Get Your Free Consultation</a>
             </div>
             <div class="col-lg-6">
                 <div class="h-100 bg-primary p-5">
@@ -140,7 +170,7 @@
                         </div>
                         <div class="ps-4">
                             <h3>AI & Machine Learning</h3>
-                            <p class="mb-0">Custom AI models, automation, predictive analytics and intelligent process optimization</p>
+                            <p class="mb-0">Custom models, automation & intelligent process optimization</p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -149,7 +179,7 @@
                         </div>
                         <div class="ps-4">
                             <h3>Cloud & DevOps</h3>
-                            <p class="mb-0">AWS, Azure, Google Cloud migration, optimization and managed services</p>
+                            <p class="mb-0">Migration, optimization and managed cloud services</p>
                         </div>
                     </div>
                     <div class="d-flex text-white">
@@ -158,23 +188,20 @@
                         </div>
                         <div class="ps-4">
                             <h3>Cybersecurity</h3>
-                            <p class="mb-0">Advanced threat protection, compliance, penetration testing & secure architecture</p>
+                            <p class="mb-0">Threat protection, compliance & secure architecture</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- About End -->
 
-    <!-- JavaScript Libraries -->
+    <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
 </html>
