--- a/index.html
+++ b/index.html
@@ -25,22 +25,6 @@
     <!-- Bootstrap & Custom CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
-    <style>
-        .carousel-item img { height: 85vh; min-height: 600px; object-fit: cover; }
-        .carousel-caption { background: rgba(0,0,0,0.45); border-radius: 12px; padding: 2.5rem 2rem; max-width: 900px; }
-        .carousel-caption h1 { font-weight: 800; line-height: 1.1; }
-        .letter-spacing-2 { letter-spacing: 3px; }
-        .feature-icon { width: 70px; height: 70px; font-size: 1.8rem; }
-        @media (max-width: 992px) {
-            .carousel-caption h1 { font-size: 2.8rem !important; }
-            .carousel-caption h5 { font-size: 1.25rem !important; }
-        }
-        @media (max-width: 768px) {
-            .carousel-caption { padding: 1.8rem 1.2rem; }
-            .carousel-caption h1 { font-size: 2.2rem !important; }
-        }
-    </style>
 </head>
 <body>
 
@@ -85,7 +69,7 @@
         </div>
     </nav>
 
-    <!-- Carousel (unchanged from your previous clean version) -->
+    <!-- Carousel -->
     <div class="container-fluid p-0 mb-5 position-relative">
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -137,8 +121,8 @@
         </div>
     </div>
 
-    <!-- Updated About / Welcome Section – Now vertical layout + your real expertise -->
-    <div class="container-fluid py-6 px-5 bg-light">
+    <!-- About / Welcome Section -->
+    <div class="container-fluid py-5 px-4 bg-light">
         <div class="row justify-content-center">
             <div class="col-lg-10">
                 <div class="text-center mb-5">
@@ -161,7 +145,7 @@
                     <div class="col-lg-6">
                         <div class="bg-white shadow-sm rounded p-4 mb-4">
                             <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 feature-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3">
+                                <div class="flex-shrink-0 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width:70px;height:70px;">
                                     <i class="fas fa-envelope fs-4"></i>
                                 </div>
                                 <h3 class="mb-0">Outlook 365 & SharePoint Mastery</h3>
@@ -171,7 +155,7 @@
 
                         <div class="bg-white shadow-sm rounded p-4 mb-4">
                             <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 feature-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3">
+                                <div class="flex-shrink-0 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width:70px;height:70px;">
                                     <i class="fas fa-robot fs-4"></i>
                                 </div>
                                 <h3 class="mb-0">Power Automate & Workflow Automation</h3>
@@ -181,7 +165,7 @@
 
                         <div class="bg-white shadow-sm rounded p-4 mb-4">
                             <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 feature-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3">
+                                <div class="flex-shrink-0 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width:70px;height:70px;">
                                     <i class="fas fa-cloud fs-4"></i>
                                 </div>
                                 <h3 class="mb-0">Azure Cloud & SQL Server Setup</h3>
@@ -191,7 +175,7 @@
 
                         <div class="bg-white shadow-sm rounded p-4">
                             <div class="d-flex align-items-center mb-3">
-                                <div class="flex-shrink-0 feature-icon bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3">
+                                <div class="flex-shrink-0 bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width:70px;height:70px;">
                                     <i class="fas fa-chalkboard-teacher fs-4"></i>
                                 </div>
                                 <h3 class="mb-0">AI Seminars & Workshops</h3>
