--- a/index.html
+++ b/index.html
@@ -25,6 +25,88 @@
     <!-- Bootstrap & Custom CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Inline styles for responsive carousel (mobile fix) -->
+    <style>
+        .carousel {
+            margin-bottom: 3rem;
+        }
+        .carousel-inner,
+        .carousel-item {
+            height: 70vh;
+            min-height: 500px;
+            position: relative;
+            overflow: hidden;
+        }
+        .carousel-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
+        .carousel-caption {
+            background: rgba(0, 0, 0, 0.55);
+            border-radius: 12px;
+            padding: 2rem 1.5rem;
+            max-width: 90%;
+            margin: 0 auto;
+            bottom: 10%;
+            color: white;
+            text-align: center;
+        }
+        .carousel-caption h5 {
+            font-size: 1.4rem;
+            margin-bottom: 1rem;
+            text-transform: uppercase;
+            font-weight: 600;
+            letter-spacing: 2px;
+        }
+        .carousel-caption h1 {
+            font-size: 2.8rem;
+            font-weight: 800;
+            line-height: 1.1;
+            margin-bottom: 1.5rem;
+        }
+        @media (max-width: 992px) {
+            .carousel-inner,
+            .carousel-item {
+                height: 65vh;
+                min-height: 480px;
+            }
+            .carousel-caption h1 {
+                font-size: 2.6rem;
+            }
+        }
+        @media (max-width: 768px) {
+            .carousel-inner,
+            .carousel-item {
+                height: 60vh;
+                min-height: 400px;
+            }
+            .carousel-caption {
+                padding: 1.5rem 1rem;
+                bottom: 8%;
+            }
+            .carousel-caption h1 {
+                font-size: 2.2rem;
+            }
+            .carousel-caption h5 {
+                font-size: 1.1rem;
+            }
+            .btn-lg {
+                padding: 0.6rem 1.8rem;
+                font-size: 1rem;
+            }
+        }
+        @media (max-width: 576px) {
+            .carousel-item {
+                min-height: 350px;
+            }
+            .carousel-caption h1 {
+                font-size: 1.9rem;
+            }
+        }
+    </style>
 </head>
 <body>
 
@@ -70,20 +152,20 @@
     </nav>
 
     <!-- Carousel -->
-    <div class="container-fluid p-0 mb-5 position-relative">
+    <div class="container-fluid p-0 mb-5">
         <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="w-100" src="img/carousel-1.jpg" alt="Microsoft 365 modern workplace">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="text-center">
-                            <h5 class="text-white text-uppercase mb-3 fw-bold letter-spacing-2 animated slideInDown">
+                            <h5 class="text-white text-uppercase mb-3 fw-bold">
                                 Microsoft 365 & Azure Expert
                             </h5>
-                            <h1 class="display-3 text-white fw-bold mb-4 animated slideInDown">
+                            <h1 class="display-3 text-white fw-bold mb-4">
                                 Get More From Your Microsoft Tools
                             </h1>
-                            <div class="mt-4 animated slideInUp">
+                            <div class="mt-4">
                                 <a href="#" class="btn btn-primary btn-lg px-5 py-3 me-3 rounded-pill shadow">Get Started</a>
                                 <a href="#" class="btn btn-outline-light btn-lg px-5 py-3 rounded-pill">Contact Us</a>
                             </div>
@@ -95,13 +177,13 @@
                     <img class="w-100" src="img/carousel-2.jpg" alt="Azure and Power Automate solutions">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="text-center">
-                            <h5 class="text-white text-uppercase mb-3 fw-bold letter-spacing-2 animated slideInDown">
+                            <h5 class="text-white text-uppercase mb-3 fw-bold">
                                 Practical IT & AI Guidance
                             </h5>
-                            <h1 class="display-3 text-white fw-bold mb-4 animated slideInDown">
+                            <h1 class="display-3 text-white fw-bold mb-4">
                                 From Setup to AI-Powered Workflows
                             </h1>
-                            <div class="mt-4 animated slideInUp">
+                            <div class="mt-4">
                                 <a href="#" class="btn btn-primary btn-lg px-5 py-3 me-3 rounded-pill shadow">Free Consultation</a>
                                 <a href="#" class="btn btn-outline-light btn-lg px-5 py-3 rounded-pill">Learn More</a>
                             </div>
@@ -132,7 +214,6 @@
                 </div>
 
                 <div class="row g-5">
-                    <!-- Left column – Intro text -->
                     <div class="col-lg-6">
                         <p class="mb-4">With deep experience in the Microsoft ecosystem, I deliver high-impact solutions without the big-agency price tag. Whether you need clean Outlook & SharePoint environments, efficient Power Automate workflows, secure SQL Server setups, on-prem/server management, Azure cloud strategy, or practical AI seminars (Copilot, AI Builder, Microsoft 365 AI features) — I’ve got you covered.</p>
                         <p class="mb-5">Focus on what matters: I bring clarity, reduce complexity, and help your team actually use the tools you already pay for.</p>
@@ -141,7 +222,6 @@
                         </div>
                     </div>
 
-                    <!-- Right column – Key services/features (vertical cards) -->
                     <div class="col-lg-6">
                         <div class="bg-white shadow-sm rounded p-4 mb-4">
                             <div class="d-flex align-items-center mb-3">
