--- a/service-mobile.html
+++ b/service-mobile.html
@@ -28,11 +28,13 @@
                         <span><i class="fas fa-map-marker-alt me-2"></i>Serving Cranston, RI &amp; Surrounding Areas</span>
                         <span class="mx-3">|</span>
                         <span class="trust-badge"><i class="fas fa-shield-alt me-1"></i>Since 2025</span>
+                        <span class="mx-3">|</span>
+                        <span class="trust-badge urgency"><i class="fas fa-fire me-1"></i>3 Client Spots Left This Month</span>
                     </div>
                 </div>
                 <div class="col-md-6 text-md-end text-center">
-                    <a href="tel:+14015551234" class="top-bar-link"><i class="fas fa-phone me-2"></i>(401) 555-1234</a>
-                    <a href="mailto:hello@techflowri.com" class="top-bar-link ms-3"><i class="fas fa-envelope me-2"></i>hello@techflowri.com</a>
+                    <a href="tel:+14013272971" class="top-bar-link"><i class="fas fa-phone me-2"></i>(401) 327-2971</a>
+                    <a href="mailto:nickbilodeau1150@yahoo.com" class="top-bar-link ms-3"><i class="fas fa-envelope me-2"></i>nickbilodeau1150@yahoo.com</a>
                 </div>
             </div>
         </div>
@@ -56,6 +58,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="service-saas.html">Custom SaaS & Apps</a></li>
                             <li><a class="dropdown-item active" href="service-mobile.html">Mobile Development</a></li>
+                            <li><a class="dropdown-item" href="service-ai.html"><i class="fas fa-star text-warning me-1"></i>AI Services</a></li>
                             <li><a class="dropdown-item" href="service-support.html">IT Support & Helpdesk</a></li>
                             <li><a class="dropdown-item" href="service-infrastructure.html">Server & Infrastructure</a></li>
                             <li><a class="dropdown-item" href="service-automation.html">Business Automation</a></li>
@@ -103,7 +106,8 @@
                     <div class="col-lg-6">
                         <div class="pricing-box">
                             <h3>Mobile App Development</h3>
-                            <div class="price">$5,000+ <small>project</small></div>
+                            <div class="price">$4,500+ <small>project</small></div>
+                            <p class="price-compare text-center mb-3"><small>Market rate: $10,000-$20,000</small></p>
                             <ul>
                                 <li>iOS or Android (or both)</li>
                                 <li>Custom UI/UX design</li>
@@ -112,6 +116,7 @@
                                 <li>30 days of free support</li>
                             </ul>
                             <a href="index.html#contact" class="btn btn-light btn-lg w-100">Get a Free Quote</a>
+                            <p class="mt-3 mb-0 small text-center"><i class="fas fa-phone me-1"></i>Call: (401) 327-2971</p>
                         </div>
                     </div>
                 </div>
@@ -159,10 +164,16 @@
             <div class="container text-center">
                 <h2 class="text-white mb-3">Let's Talk About Your Mobile App Idea</h2>
                 <p class="text-white opacity-90 mb-4 mx-auto" style="max-width: 600px;">Not sure if a mobile app makes sense for your business? We'll give you an honest assessment &mdash; and if there's a simpler solution, we'll tell you.</p>
-                <a href="index.html#contact" class="btn btn-light btn-lg">
-                    Schedule Free Consultation
-                    <i class="fas fa-arrow-right ms-2"></i>
-                </a>
+                <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center align-items-center">
+                    <a href="index.html#contact" class="btn btn-light btn-lg">
+                        Schedule Free Consultation
+                        <i class="fas fa-arrow-right ms-2"></i>
+                    </a>
+                    <a href="tel:+14013272971" class="btn btn-outline-light btn-lg">
+                        <i class="fas fa-phone me-2"></i>(401) 327-2971
+                    </a>
+                </div>
+                <p class="text-white mt-3 small opacity-75"><i class="fas fa-map-marker-alt me-1"></i>Based in Cranston, RI &mdash; Same-day on-site support available</p>
             </div>
         </section>
     </main>
@@ -183,6 +194,7 @@
                     <ul class="footer-links">
                         <li><a href="service-saas.html">Custom Software</a></li>
                         <li><a href="service-mobile.html">Mobile Apps</a></li>
+                        <li><a href="service-ai.html">AI Services</a></li>
                         <li><a href="service-support.html">IT Support</a></li>
                         <li><a href="service-infrastructure.html">Infrastructure</a></li>
                         <li><a href="service-automation.html">Automation</a></li>
@@ -200,9 +212,10 @@
                     <h5 class="footer-title">Contact Info</h5>
                     <ul class="footer-contact">
                         <li><i class="fas fa-map-marker-alt"></i> Cranston, RI 02920</li>
-                        <li><i class="fas fa-phone"></i> <a href="tel:+14015551234">(401) 555-1234</a></li>
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:hello@techflowri.com">hello@techflowri.com</a></li>
+                        <li><i class="fas fa-phone"></i> <a href="tel:+14013272971">(401) 327-2971</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:nickbilodeau1150@yahoo.com">nickbilodeau1150@yahoo.com</a></li>
                     </ul>
+                    <p class="small mt-2 opacity-75"><i class="fas fa-bolt me-1"></i>Same-day on-site support available</p>
                 </div>
             </div>
             <div class="footer-bottom">
