--- a/service-support.html
+++ b/service-support.html
@@ -28,11 +28,13 @@
                         <span><i class="fas fa-map-marker-alt me-2"></i>Serving Cranston, RI &amp; Surrounding Areas</span>
                         <span class="mx-3">|</span>
                         <span class="trust-badge"><i class="fas fa-shield-alt me-1"></i>Since 2025</span>
+                        <span class="mx-3">|</span>
+                        <span class="trust-badge urgency"><i class="fas fa-fire me-1"></i>3 Client Spots Left This Month</span>
                     </div>
                 </div>
                 <div class="col-md-6 text-md-end text-center">
-                    <a href="tel:+14015551234" class="top-bar-link"><i class="fas fa-phone me-2"></i>(401) 555-1234</a>
-                    <a href="mailto:hello@techflowri.com" class="top-bar-link ms-3"><i class="fas fa-envelope me-2"></i>hello@techflowri.com</a>
+                    <a href="tel:+14013272971" class="top-bar-link"><i class="fas fa-phone me-2"></i>(401) 327-2971</a>
+                    <a href="mailto:nickbilodeau1150@yahoo.com" class="top-bar-link ms-3"><i class="fas fa-envelope me-2"></i>nickbilodeau1150@yahoo.com</a>
                 </div>
             </div>
         </div>
@@ -56,6 +58,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="service-saas.html">Custom SaaS & Apps</a></li>
                             <li><a class="dropdown-item" href="service-mobile.html">Mobile Development</a></li>
+                            <li><a class="dropdown-item" href="service-ai.html"><i class="fas fa-star text-warning me-1"></i>AI Services</a></li>
                             <li><a class="dropdown-item active" href="service-support.html">IT Support & Helpdesk</a></li>
                             <li><a class="dropdown-item" href="service-infrastructure.html">Server & Infrastructure</a></li>
                             <li><a class="dropdown-item" href="service-automation.html">Business Automation</a></li>
@@ -102,17 +105,21 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="pricing-box">
-                            <h3>Managed IT Support</h3>
-                            <div class="price">$299<small>/month</small></div>
+                            <h3>IT Support Options</h3>
+                            <div class="price">$75<small>/hour</small></div>
+                            <p class="price-compare text-center mb-2"><small>Market rate: $100-$150/hour</small></p>
+                            <div class="text-center mb-3">
+                                <span class="badge bg-light text-dark">or $500/month retainer</span>
+                            </div>
                             <ul>
-                                <li>Unlimited remote support</li>
-                                <li>Proactive monitoring & maintenance</li>
+                                <li>Remote & on-site support</li>
+                                <li>Proactive monitoring available</li>
                                 <li>Security updates & patches</li>
-                                <li>On-site visits included (2/month)</li>
+                                <li>Same-day on-site visits</li>
                                 <li>24/7 emergency support</li>
                             </ul>
-                            <a href="index.html#contact" class="btn btn-light btn-lg w-100">Start Free Trial</a>
-                            <p class="mt-3 mb-0 small opacity-75">Also available: Pay-as-you-go at $95/hour</p>
+                            <a href="index.html#contact" class="btn btn-light btn-lg w-100">Get Started</a>
+                            <p class="mt-3 mb-0 small text-center"><i class="fas fa-phone me-1"></i>Call: (401) 327-2971</p>
                         </div>
                     </div>
                 </div>
@@ -160,10 +167,16 @@
             <div class="container text-center">
                 <h2 class="text-white mb-3">Stop Wasting Time on Tech Problems</h2>
                 <p class="text-white opacity-90 mb-4 mx-auto" style="max-width: 600px;">Whether you need ongoing support or just someone to call when things break, we've got you covered. First consultation is always free.</p>
-                <a href="index.html#contact" class="btn btn-light btn-lg">
-                    Get Started Today
-                    <i class="fas fa-arrow-right ms-2"></i>
-                </a>
+                <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center align-items-center">
+                    <a href="index.html#contact" class="btn btn-light btn-lg">
+                        Get Started Today
+                        <i class="fas fa-arrow-right ms-2"></i>
+                    </a>
+                    <a href="tel:+14013272971" class="btn btn-outline-light btn-lg">
+                        <i class="fas fa-phone me-2"></i>(401) 327-2971
+                    </a>
+                </div>
+                <p class="text-white mt-3 small opacity-75"><i class="fas fa-map-marker-alt me-1"></i>Based in Cranston, RI &mdash; Same-day on-site support available</p>
             </div>
         </section>
     </main>
@@ -184,6 +197,7 @@
                     <ul class="footer-links">
                         <li><a href="service-saas.html">Custom Software</a></li>
                         <li><a href="service-mobile.html">Mobile Apps</a></li>
+                        <li><a href="service-ai.html">AI Services</a></li>
                         <li><a href="service-support.html">IT Support</a></li>
                         <li><a href="service-infrastructure.html">Infrastructure</a></li>
                         <li><a href="service-automation.html">Automation</a></li>
@@ -201,9 +215,10 @@
                     <h5 class="footer-title">Contact Info</h5>
                     <ul class="footer-contact">
                         <li><i class="fas fa-map-marker-alt"></i> Cranston, RI 02920</li>
-                        <li><i class="fas fa-phone"></i> <a href="tel:+14015551234">(401) 555-1234</a></li>
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:hello@techflowri.com">hello@techflowri.com</a></li>
+                        <li><i class="fas fa-phone"></i> <a href="tel:+14013272971">(401) 327-2971</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:nickbilodeau1150@yahoo.com">nickbilodeau1150@yahoo.com</a></li>
                     </ul>
+                    <p class="small mt-2 opacity-75"><i class="fas fa-bolt me-1"></i>Same-day on-site support available</p>
                 </div>
             </div>
             <div class="footer-bottom">
