--- a/index.html
+++ b/index.html
@@ -680,7 +680,13 @@
 
                     <div class="col-lg-7">
                         <div class="contact-form-wrapper">
-                            <form id="contactForm" class="contact-form" action="#" method="POST">
+                            <form id="contactForm" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+                                <!-- Web3Forms Access Key - Get yours free at web3forms.com -->
+                                <input type="hidden" name="access_key" value="65e9922a-598f-4ab7-a28e-017d00fb4817">
+                                <input type="hidden" name="subject" value="New Contact Form Submission - TechFlow Solutions">
+                                <input type="hidden" name="from_name" value="TechFlow Website">
+                                <input type="hidden" name="redirect" value="https://web3forms.com/success">
+
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <label for="name" class="form-label">Your Name *</label>
