--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                             <li><a class="dropdown-item" href="service-automation.html">Business Automation</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-graduation-cap me-1"></i>Learn AI</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="learn-agents.html"><i class="fas fa-robot me-2 text-primary"></i>Understanding AI Agents <span class="badge bg-success ms-2">Free</span></a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="#industries">Industries</a></li>
                     <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
@@ -178,6 +184,21 @@
                     </div>
                     <div class="col-md-4 text-md-end mt-3 mt-md-0">
                         <a href="#contact" class="btn btn-light">Get Free Quote</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Free AI Learning Banner -->
+        <section class="py-4" style="background: linear-gradient(135deg, #FDF6E3 0%, #FFFDF9 100%); border-bottom: 1px solid rgba(45, 42, 38, 0.08);">
+            <div class="container">
+                <div class="row align-items-center text-center text-md-start">
+                    <div class="col-md-8">
+                        <h4 class="mb-1" style="font-family: 'Space Grotesk', sans-serif;"><i class="fas fa-robot me-2" style="color: #C4654A;"></i>Free Lesson: What Are AI Agents?</h4>
+                        <p class="mb-0" style="color: rgba(45, 42, 38, 0.7);">Learn how AI Agents can automate your work &mdash; explained simply with interactive 3D visualization. No coding required.</p>
+                    </div>
+                    <div class="col-md-4 text-md-end mt-3 mt-md-0">
+                        <a href="learn-agents.html" class="btn btn-lg" style="background: #C4654A; color: white; border-radius: 100px;"><i class="fas fa-play-circle me-2"></i>Start Learning</a>
                     </div>
                 </div>
             </div>
@@ -795,6 +816,10 @@
                         <li><a href="#faq">FAQ</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                    <h5 class="footer-title mt-3">Learn AI</h5>
+                    <ul class="footer-links">
+                        <li><a href="learn-agents.html"><i class="fas fa-robot me-1" style="color: #C4654A;"></i>AI Agents (Free)</a></li>
                     </ul>
                 </div>
 
