--- a/service-ai.html
+++ b/service-ai.html
@@ -63,7 +63,12 @@
                             <li><a class="dropdown-item" href="service-automation.html">Business Automation</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#industries">Industries</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-graduation-cap me-1"></i>Learn AI</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="learn-agents.html"><i class="fas fa-robot me-2 text-primary"></i>Understanding AI Agents <span class="badge bg-success ms-2">Free</span></a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="index.html#faq">FAQ</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
                 </ul>
@@ -220,6 +225,26 @@
                             <h4>Retail: Customer Service Bot</h4>
                             <p>A local retailer was missing sales because they couldn't respond to website inquiries fast enough. I built a custom chatbot that answers product questions, checks inventory, and captures leads 24/7. They're now converting website visitors at 3x the previous rate.</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Free Learning Banner -->
+        <section class="py-5" style="background: linear-gradient(135deg, #FDF6E3 0%, #FFFDF9 100%);">
+            <div class="container">
+                <div class="row align-items-center g-4">
+                    <div class="col-lg-8">
+                        <span style="display: inline-block; background: rgba(196, 101, 74, 0.1); color: #C4654A; padding: 0.375rem 1rem; border-radius: 100px; font-size: 0.875rem; font-weight: 600; margin-bottom: 1rem;">
+                            <i class="fas fa-gift me-1"></i> Free Resource
+                        </span>
+                        <h3 style="font-family: 'Space Grotesk', sans-serif; margin-bottom: 0.5rem;">Want to Understand AI Agents First?</h3>
+                        <p style="color: rgba(45, 42, 38, 0.7); margin-bottom: 0; font-size: 1.0625rem;">Take our free interactive lesson. Learn what AI Agents are, how they work, and what they can do for your business &mdash; all explained simply with a stunning 3D visualization.</p>
+                    </div>
+                    <div class="col-lg-4 text-lg-end">
+                        <a href="learn-agents.html" class="btn btn-lg" style="background: #C4654A; color: white; border-radius: 100px; padding: 1rem 2rem;">
+                            <i class="fas fa-play-circle me-2"></i>Start Free Lesson
+                        </a>
                     </div>
                 </div>
             </div>
